{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 61,
  "lineage": "127e3f82-766c-15b7-63ea-6283634dec11",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dd793e47a750e913",
            "arn": "arn:aws:ec2:us-east-1:077878370245:elastic-ip/eipalloc-0dd793e47a750e913",
            "association_id": "eipassoc-05c4ce8128e164d98",
            "domain": "vpc",
            "id": "eipalloc-0dd793e47a750e913",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07d1b41971c5a7050",
            "private_dns": "ip-10-0-0-122.ec2.internal",
            "private_ip": "10.0.0.122",
            "public_dns": "ec2-98-95-247-93.compute-1.amazonaws.com",
            "public_ip": "98.95.247.93",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "neural-hive-dev-nat-eip-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "neural-hive-dev-nat-eip-1",
              "Project": "neural-hive-mind"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce6920fe5f3116c1",
            "arn": "arn:aws:ec2:us-east-1:077878370245:elastic-ip/eipalloc-0ce6920fe5f3116c1",
            "association_id": "eipassoc-052ab224bb9d5434f",
            "domain": "vpc",
            "id": "eipalloc-0ce6920fe5f3116c1",
            "network_border_group": "us-east-1",
            "network_interface": "eni-04d985ec66fdc2f2a",
            "private_dns": "ip-10-0-1-107.ec2.internal",
            "private_ip": "10.0.1.107",
            "public_dns": "ec2-98-95-114-237.compute-1.amazonaws.com",
            "public_ip": "98.95.114.237",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "neural-hive-dev-nat-eip-2"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "neural-hive-dev-nat-eip-2",
              "Project": "neural-hive-mind"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-012891b90b74ffb0c",
            "arn": "arn:aws:ec2:us-east-1:077878370245:elastic-ip/eipalloc-012891b90b74ffb0c",
            "association_id": "eipassoc-0d4f1a8801ee33458",
            "domain": "vpc",
            "id": "eipalloc-012891b90b74ffb0c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-034e853ca105519f2",
            "private_dns": "ip-10-0-2-217.ec2.internal",
            "private_ip": "10.0.2.217",
            "public_dns": "ec2-98-84-204-145.compute-1.amazonaws.com",
            "public_ip": "98.84.204.145",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "neural-hive-dev-nat-eip-3"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "neural-hive-dev-nat-eip-3",
              "Project": "neural-hive-mind"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:077878370245:internet-gateway/igw-073c8f7e29b42cccd",
            "id": "igw-073c8f7e29b42cccd",
            "owner_id": "077878370245",
            "tags": {
              "Name": "neural-hive-dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "neural-hive-dev-igw",
              "Project": "neural-hive-mind"
            },
            "vpc_id": "vpc-0ed790c76ad3bccb0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dd793e47a750e913",
            "association_id": "eipassoc-05c4ce8128e164d98",
            "connectivity_type": "public",
            "id": "nat-0714e138d6148c287",
            "network_interface_id": "eni-07d1b41971c5a7050",
            "private_ip": "10.0.0.122",
            "public_ip": "98.95.247.93",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a115911acb8235d3",
            "tags": {
              "Name": "neural-hive-dev-nat-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "neural-hive-dev-nat-1",
              "Project": "neural-hive-mind"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce6920fe5f3116c1",
            "association_id": "eipassoc-052ab224bb9d5434f",
            "connectivity_type": "public",
            "id": "nat-02c921306ca3127be",
            "network_interface_id": "eni-04d985ec66fdc2f2a",
            "private_ip": "10.0.1.107",
            "public_ip": "98.95.114.237",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0468075e9e502840f",
            "tags": {
              "Name": "neural-hive-dev-nat-2"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "neural-hive-dev-nat-2",
              "Project": "neural-hive-mind"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-012891b90b74ffb0c",
            "association_id": "eipassoc-0d4f1a8801ee33458",
            "connectivity_type": "public",
            "id": "nat-0bb5f22619381ac90",
            "network_interface_id": "eni-034e853ca105519f2",
            "private_ip": "10.0.2.217",
            "public_ip": "98.84.204.145",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07273bfdac2e6c790",
            "tags": {
              "Name": "neural-hive-dev-nat-3"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "neural-hive-dev-nat-3",
              "Project": "neural-hive-mind"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:077878370245:route-table/rtb-03e18f29ddf199144",
            "id": "rtb-03e18f29ddf199144",
            "owner_id": "077878370245",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0714e138d6148c287",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "neural-hive-dev-private-rt-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "neural-hive-dev-private-rt-1",
              "Project": "neural-hive-mind"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed790c76ad3bccb0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:077878370245:route-table/rtb-08ae1a8981213a4ec",
            "id": "rtb-08ae1a8981213a4ec",
            "owner_id": "077878370245",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02c921306ca3127be",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "neural-hive-dev-private-rt-2"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "neural-hive-dev-private-rt-2",
              "Project": "neural-hive-mind"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed790c76ad3bccb0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:077878370245:route-table/rtb-08839525baac8aaef",
            "id": "rtb-08839525baac8aaef",
            "owner_id": "077878370245",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bb5f22619381ac90",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "neural-hive-dev-private-rt-3"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "neural-hive-dev-private-rt-3",
              "Project": "neural-hive-mind"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed790c76ad3bccb0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:077878370245:route-table/rtb-00df18028544e7e3e",
            "id": "rtb-00df18028544e7e3e",
            "owner_id": "077878370245",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-073c8f7e29b42cccd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "neural-hive-dev-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "neural-hive-dev-public-rt",
              "Project": "neural-hive-mind"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed790c76ad3bccb0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01965b2e8a439a281",
            "route_table_id": "rtb-03e18f29ddf199144",
            "subnet_id": "subnet-0003624587ea5a5a3"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0adb30308c107d47f",
            "route_table_id": "rtb-08ae1a8981213a4ec",
            "subnet_id": "subnet-0cc25a70ae288330f"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0657c5be1823282d4",
            "route_table_id": "rtb-08839525baac8aaef",
            "subnet_id": "subnet-0d53d8ad36e2aa3fc"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8e0940be9416e5a",
            "route_table_id": "rtb-00df18028544e7e3e",
            "subnet_id": "subnet-0a115911acb8235d3"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-006da1d2cc43929d9",
            "route_table_id": "rtb-00df18028544e7e3e",
            "subnet_id": "subnet-0468075e9e502840f"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bbaac906ef6ef256",
            "route_table_id": "rtb-00df18028544e7e3e",
            "subnet_id": "subnet-07273bfdac2e6c790"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:077878370245:security-group/sg-0547df8c4041ddb61",
            "description": "Security group for EKS cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0547df8c4041ddb61",
            "ingress": [],
            "name": "neural-hive-dev-cluster-sg",
            "name_prefix": "",
            "owner_id": "077878370245",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "neural-hive-dev-cluster-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "neural-hive-dev-cluster-sg",
              "Project": "neural-hive-mind"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed790c76ad3bccb0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:077878370245:subnet/subnet-0003624587ea5a5a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0003624587ea5a5a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "077878370245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "neural-hive-dev-private-1",
              "kubernetes.io/cluster/neural-hive-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "neural-hive-dev-private-1",
              "Project": "neural-hive-mind",
              "kubernetes.io/cluster/neural-hive-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ed790c76ad3bccb0"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:077878370245:subnet/subnet-0cc25a70ae288330f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc25a70ae288330f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "077878370245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "neural-hive-dev-private-2",
              "kubernetes.io/cluster/neural-hive-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "neural-hive-dev-private-2",
              "Project": "neural-hive-mind",
              "kubernetes.io/cluster/neural-hive-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ed790c76ad3bccb0"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:077878370245:subnet/subnet-0d53d8ad36e2aa3fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d53d8ad36e2aa3fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "077878370245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "neural-hive-dev-private-3",
              "kubernetes.io/cluster/neural-hive-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "neural-hive-dev-private-3",
              "Project": "neural-hive-mind",
              "kubernetes.io/cluster/neural-hive-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ed790c76ad3bccb0"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:077878370245:subnet/subnet-0a115911acb8235d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a115911acb8235d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "077878370245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "neural-hive-dev-public-1",
              "kubernetes.io/cluster/neural-hive-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "neural-hive-dev-public-1",
              "Project": "neural-hive-mind",
              "kubernetes.io/cluster/neural-hive-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ed790c76ad3bccb0"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:077878370245:subnet/subnet-0468075e9e502840f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0468075e9e502840f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "077878370245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "neural-hive-dev-public-2",
              "kubernetes.io/cluster/neural-hive-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "neural-hive-dev-public-2",
              "Project": "neural-hive-mind",
              "kubernetes.io/cluster/neural-hive-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ed790c76ad3bccb0"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:077878370245:subnet/subnet-07273bfdac2e6c790",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07273bfdac2e6c790",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "077878370245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "neural-hive-dev-public-3",
              "kubernetes.io/cluster/neural-hive-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "neural-hive-dev-public-3",
              "Project": "neural-hive-mind",
              "kubernetes.io/cluster/neural-hive-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ed790c76ad3bccb0"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:077878370245:vpc/vpc-0ed790c76ad3bccb0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0df4891a9d175d407",
            "default_route_table_id": "rtb-068aba73b30aa7c27",
            "default_security_group_id": "sg-00569f27cf55a81b4",
            "dhcp_options_id": "dopt-01df89f6db8620fc7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ed790c76ad3bccb0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-068aba73b30aa7c27",
            "owner_id": "077878370245",
            "tags": {
              "Name": "neural-hive-dev-vpc",
              "kubernetes.io/cluster/neural-hive-dev": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "neural-hive-dev-vpc",
              "Project": "neural-hive-mind",
              "kubernetes.io/cluster/neural-hive-dev": "shared"
            }
          }
        }
      ]
    }
  ]
}